--- a/world/kgoldrunner/PKGBUILD
+++ b/world/kgoldrunner/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kgoldrunner
-pkgver=24.12.3
+pkgver=25.04.0
 pkgrel=1
 pkgdesc='A game of action and puzzle solving'
 url='https://apps.kde.org/kgoldrunner/'
@@ -18,6 +18,7 @@ depends=(gcc-libs
          kcrash
          kdbusaddons
          ki18n
+         kiconthemes
          kio
          kwidgetsaddons
          kxmlgui
@@ -28,7 +29,7 @@ makedepends=(extra-cmake-modules
 groups=(kde-applications
         kde-games)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('4956cb028ef381fbbe57ee88b80ef4ad5a9f00037f6f0e920118f0aed240d972'
+sha256sums=('5bceca5556c6c8600512ca889b399d4a567068378f5f0b07cdaebd97a648bf1e'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
