--- a/world/kio-extras/PKGBUILD
+++ b/world/kio-extras/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kio-extras
-pkgver=24.12.3
+pkgver=25.04.0
 pkgrel=1
 pkgdesc='Additional components to increase the functionality of KIO'
 arch=(x86_64)
@@ -22,6 +22,7 @@ depends=(gcc-libs
          kdsoap-ws-discovery-client
          ki18n
          kio
+         knotifications
          kservice
          ktextwidgets
          kwidgetsaddons
@@ -29,7 +30,9 @@ depends=(gcc-libs
          libkexiv2
          libmtp
          libplist
+         libproxy
          libssh
+         libtirpc
          libxcursor
          phonon-qt6
          plasma-activities
@@ -37,6 +40,7 @@ depends=(gcc-libs
          qt6-base
          qt6-svg
          ripgrep-all
+         sh
          smbclient
          solid
          syntax-highlighting)
@@ -59,7 +63,7 @@ optdepends=('icoutils: Windows executable thumbnails'
 groups=(kde-applications
         kde-network)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('c4374fe36e87e7b0eb745a1bba8f4b066f58b84139f9cd7b42cab6711bfb6e2f'
+sha256sums=('7c87dc107ed375f5dfed74ffaf86a25990c131e539a4789b78ba70751b2fefac'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
