--- a/world/kjumpingcube/PKGBUILD
+++ b/world/kjumpingcube/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kjumpingcube
-pkgver=24.12.3
+pkgver=25.04.0
 pkgrel=1
 pkgdesc='A simple tactical game'
 url='https://apps.kde.org/kjumpingcube/'
@@ -18,6 +18,7 @@ depends=(gcc-libs
          kcrash
          kdbusaddons
          ki18n
+         kiconthemes
          kio
          kwidgetsaddons
          kxmlgui
@@ -29,7 +30,7 @@ makedepends=(extra-cmake-modules
 groups=(kde-applications
         kde-games)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('42481586690eca18a7625f3c51f1a706d8587e75287263bc4b90bcabf2fa5f03'
+sha256sums=('9e6fbea7888f1922400c88f6a8508bb4009cec78c02ba3691475cd71fa5a1a15'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
