--- a/world/klettres/PKGBUILD
+++ b/world/klettres/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=klettres
-pkgver=24.12.3
+pkgver=25.04.0
 pkgrel=1
 pkgdesc='Learn The Alphabet'
 url='https://apps.kde.org/klettres/'
@@ -19,15 +19,15 @@ depends=(gcc-libs
          knewstuff
          kwidgetsaddons
          kxmlgui
-         phonon-qt6
          qt6-base
+         qt6-multimedia
          qt6-svg)
 makedepends=(extra-cmake-modules
              kdoctools)
 groups=(kde-applications
         kde-education)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('9ae36ccad9fde66c7c61113d92eb8f546117e1b259ee18dfb93daeebdd26f6b4'
+sha256sums=('b50f9db81ca7a8f5966186a5e0db6381190cbbcfc65d5bad13bc7536ddfa9d4d'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
