--- a/world/kmag/PKGBUILD
+++ b/world/kmag/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kmag
-pkgver=24.12.3
+pkgver=25.04.0
 pkgrel=1
 arch=(x86_64)
 pkgdesc='Screen Magnifier'
@@ -15,6 +15,7 @@ depends=(gcc-libs
          kconfig
          kconfigwidgets
          kcoreaddons
+         kcrash
          ki18n
          kio
          kwidgetsaddons
@@ -26,7 +27,7 @@ makedepends=(extra-cmake-modules
 groups=(kde-applications
         kde-accessibility)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('7fe889bef8b4ca9c63f8fedbf91295d543507fc381293463b1a9751a040a4c11'
+sha256sums=('853aba2d98ec0c46d234fcf72c717b8e44e52a1c0083724c91002f2902eac514'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
