--- a/world/kmines/PKGBUILD
+++ b/world/kmines/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kmines
-pkgver=24.12.3
+pkgver=25.04.0
 pkgrel=1
 pkgdesc='The classic Minesweeper game'
 url='https://apps.kde.org/kmines/'
@@ -18,6 +18,7 @@ depends=(gcc-libs
          kcrash
          kdbusaddons
          ki18n
+         kiconthemes
          ktextwidgets
          kwidgetsaddons
          kxmlgui
@@ -28,7 +29,7 @@ makedepends=(extra-cmake-modules
 groups=(kde-applications
         kde-games)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('537913cc2cfea1694fdd1aaf0872bba7182aa8f9341245de20a4455e0acf419d'
+sha256sums=('5876a714815467ea3dd66d4b85f45fac4577689b551cda82502cbc723d308463'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
