--- a/world/knetwalk/PKGBUILD
+++ b/world/knetwalk/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=knetwalk
-pkgver=24.12.3
+pkgver=25.04.0
 pkgrel=1
 pkgdesc='Connect all the terminals to the server, in as few turns as possible'
 url='https://apps.kde.org/knetwalk/'
@@ -18,6 +18,7 @@ depends=(gcc-libs
          kcrash
          kdbusaddons
          ki18n
+         kiconthemes
          ktextwidgets
          kwidgetsaddons
          kxmlgui
@@ -29,7 +30,7 @@ makedepends=(extra-cmake-modules
 groups=(kde-applications
         kde-games)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('8f6345ad9063d863dae5e52e207fb9aa7cf7d3133479c9f7ca1ffed1738fa3b6'
+sha256sums=('7d52cb92cf6ec7e67f28b86488562ebd23db6959677995b1d97cea773a333bb5'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
