--- a/world/kolf/PKGBUILD
+++ b/world/kolf/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=kolf
-pkgver=24.12.3
+pkgver=25.04.0
 pkgrel=1
 pkgdesc='A miniature golf game with 2d top-down view'
 url='https://apps.kde.org/kolf/'
@@ -19,6 +19,7 @@ depends=(gcc-libs
          kcrash
          kdbusaddons
          ki18n
+         kiconthemes
          kio
          ktextwidgets
          kwidgetsaddons
@@ -30,7 +31,7 @@ makedepends=(extra-cmake-modules
 groups=(kde-applications
         kde-games)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('e4bddaf198f700c73e2ebbe475c8acbfbd495fbb8cb2f2f765263e0e5a56256f'
+sha256sums=('f50c5bfce3bd29e9f165906e924a400109ad5fe8c06c4a2e31542249d00e785d'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
