--- a/world/kpublictransport/PKGBUILD
+++ b/world/kpublictransport/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=kpublictransport
-pkgver=24.12.3
+pkgver=25.04.0
 pkgrel=1
 pkgdesc='Library to assist with accessing public transport timetables and other data'
 arch=(x86_64)
@@ -21,7 +21,7 @@ makedepends=(doxygen
              qt6-tools)
 optdepends=('kirigami: QML bindings')
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('751ff49cfd88450e957bd5f2920bf01b3a452011dfd341d18ad0d06bbaaaffe9'
+sha256sums=('2134e51dc956bd43ce673e857cd62c15ad983b2ca68a9ca1a67ded2ce2c035f4'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
@@ -30,8 +30,7 @@ validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aac
 build() {
   cmake -B build -S $pkgname-$pkgver \
     -DBUILD_TESTING=OFF \
-    -DBUILD_QCH=ON \
-    -DQT_MAJOR_VERSION=6
+    -DBUILD_QCH=ON
   cmake --build build
 }
 
