--- a/world/krdc/PKGBUILD
+++ b/world/krdc/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=krdc
-pkgver=24.12.3
+pkgver=25.04.0
 pkgrel=1
 pkgdesc='Remote Desktop Client'
 url='https://apps.kde.org/krdc/'
@@ -33,17 +33,17 @@ depends=(gcc-libs
          qt6-wayland
          wayland)
 makedepends=(extra-cmake-modules
-             freerdp2
+             freerdp
              kdoctools
              libvncserver)
 optdepends=('libvncserver: VNC support'
             'libssh: VNC support'
-            'freerdp2: RDP support'
+            'freerdp: RDP support'
             'keditbookmarks: to edit bookmarks')
 groups=(kde-applications
         kde-network)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('4bfe9e01fb16d97851cbf22563d5fb109976e3c561e8b079c493201613953764'
+sha256sums=('c80d008cd4370cd79ff987fe792ef8a10da5e994addb84e884343a46d14b3df4'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
