--- a/world/kweathercore/PKGBUILD
+++ b/world/kweathercore/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=kweathercore
-pkgver=24.12.3
+pkgver=25.04.0
 pkgrel=1
 pkgdesc='Library to facilitate retrieval of weather information including forecasts and alerts'
 arch=(x86_64)
@@ -16,9 +16,11 @@ depends=(gcc-libs
          qt6-positioning)
 makedepends=(doxygen
              extra-cmake-modules
+             qt6-declarative
              qt6-tools)
+optdepends=('qt6-declarative: QML bindings')
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('18c9562a01c2295cb55ae8be42c93b9ec0065a3fb4a4bb7b11933db97d0cc285'
+sha256sums=('17f208e4a126778f1fbd179522792c6aca1dd614a06ce4cd5452a5fe6f67cd4c'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
