--- a/world/lokalize/PKGBUILD
+++ b/world/lokalize/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=lokalize
-pkgver=24.12.3
+pkgver=25.04.0
 pkgrel=1
 pkgdesc='Computer-Aided Translation System'
 url='https://apps.kde.org/lokalize/'
@@ -22,6 +22,7 @@ depends=(gcc-libs
          kcrash
          kdbusaddons
          ki18n
+         kiconthemes
          kio
          kitemviews
          knotifications
@@ -38,7 +39,7 @@ optdepends=('languagetool: spell and grammar checking'
 groups=(kde-applications
         kde-sdk)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('f34348403ceaad79eceae088d1d0f2dd3c9ecd30319ce0b2847135aa0803f218'
+sha256sums=('44dd2bfefb53d8a5082f3215a02a4dbcb14ac2014bf1117cac5aebc7aaf0957a'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
