--- a/world/mailcommon/PKGBUILD
+++ b/world/mailcommon/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=mailcommon
-pkgver=24.12.3
+pkgver=25.04.0
 pkgrel=1
 pkgdesc='KDE PIM library providing support for mail applications'
 arch=(x86_64)
@@ -36,17 +36,17 @@ depends=(akonadi-contacts
          libkleo
          mailimporter
          messagelib
-         phonon-qt6
          pimcommon
          qgpgme-qt6
          qt6-base
+         qt6-multimedia
          syntax-highlighting)
 makedepends=(doxygen
              extra-cmake-modules
              qt6-doc
              qt6-tools)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('e603486bd76db5486c8af98053d2792a1b47d09fbd02e2db807d3c04aad2a8ef'
+sha256sums=('5ae186a78b2b4b322a4ffe60992812490f9f1bcaa05774aa7200d0c9ca2a5cf2'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
