--- a/world/neochat/PKGBUILD
+++ b/world/neochat/PKGBUILD
@@ -2,7 +2,7 @@
 # Contributor: Antonio Rojas <arojas@archlinux.org>
 
 pkgname=neochat
-pkgver=24.12.3
+pkgver=25.04.0
 pkgrel=1
 pkgdesc='A client for matrix, the decentralized communication protocol'
 url='https://apps.kde.org/neochat/'
@@ -18,6 +18,7 @@ depends=(cmark
          kcrash
          kdbusaddons
          ki18n
+         kiconthemes
          kio
          kirigami
          kirigami-addons
@@ -49,7 +50,7 @@ makedepends=(extra-cmake-modules
 groups=(kde-applications
         kde-network)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('0da4ef87620647efca0198d420e897b97c56bcfcbcfdaa5a78aa50fd488301e0'
+sha256sums=('8f82f14eecf6b5cbb2054a957cb889fbc025fe368ca1fca1ab7a2319a7317202'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
