--- a/world/palapeli/PKGBUILD
+++ b/world/palapeli/PKGBUILD
@@ -4,7 +4,7 @@
 # Contributor: Andrea Scarpino <andrea@archlinux.org>
 
 pkgname=palapeli
-pkgver=24.12.3
+pkgver=25.04.0
 pkgrel=1
 pkgdesc='A single-player jigsaw puzzle game'
 url='https://apps.kde.org/palapeli/'
@@ -20,6 +20,7 @@ depends=(gcc-libs
          kcrash
          kdbusaddons
          ki18n
+         kiconthemes
          kio
          kitemviews
          knotifications
@@ -34,7 +35,7 @@ makedepends=(extra-cmake-modules
 groups=(kde-applications
         kde-games)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('10913895c626a31db5b5ddfbec09bf05170f1699caa97ee6a98548ad7063e820'
+sha256sums=('e967c9af02baeda287927656f3815dd9c3a2664217b091ea067ee9d643c746ac'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
