--- a/world/pim-sieve-editor/PKGBUILD
+++ b/world/pim-sieve-editor/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Felix Yan <felixonmars@archlinux.org>
 
 pkgname=pim-sieve-editor
-pkgver=24.12.3
+pkgver=25.04.0
 pkgrel=1
 pkgdesc='Mail sieve editor'
 arch=(x86_64)
@@ -23,6 +23,7 @@ depends=(gcc-libs
          kmailtransport
          kuserfeedback
          kwidgetsaddons
+         kwindowsystem
          kxmlgui
          libksieve
          pimcommon
@@ -33,7 +34,7 @@ makedepends=(extra-cmake-modules
 groups=(kde-applications
         kde-pim)
 source=(https://download.kde.org/stable/release-service/$pkgver/src/$pkgname-$pkgver.tar.xz{,.sig})
-sha256sums=('dbf1d481fd0eaaba40b7abe404fd01afa8fb37229f4c083ac0b19c5316f25210'
+sha256sums=('653d6d98d0db19b183ef57c339851ebcbcbd2e906d6b7fc9c704416e9111d095'
             'SKIP')
 validpgpkeys=(CA262C6C83DE4D2FB28A332A3A6A4DB839EAA6D7  # Albert Astals Cid <aacid@kde.org>
               F23275E4BF10AFC1DF6914A6DBD2CE893E2D1C87  # Christoph Feck <cfeck@kde.org>
