Updated kde-applications-meta - 25.04-1

--- a/world/kde-applications-meta/PKGBUILD
+++ b/world/kde-applications-meta/PKGBUILD
@@ -18,8 +18,8 @@ pkgname=(kde-applications-meta
          kde-system-meta
          kde-utilities-meta
          kdevelop-meta)
-pkgver=24.12
-pkgrel=2
+pkgver=25.04
+pkgrel=1
 arch=(any)
 license=(None)
 url='https://www.archlinux.org/'
@@ -267,6 +267,7 @@ package_kde-utilities-meta() {
            kwalletmanager
            kweather
            markdownpart
+           qrca
            skanpage
            sweeper
            telly-skout
