--- a/galaxy/scribus/.artixlinux/pkgbase.yaml
+++ b/galaxy/scribus/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: scribus
-  version: 1.6.3-5
+  version: 1.6.4-1
   arch:
     - x86_64
   pkgname:
     - scribus
 actions:
   addRepo: galaxy
-  removeRepo: galaxy-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -49,7 +49,7 @@ repos:
     version: null
     packages: []
   galaxy:
-    version: 1.6.3-5
+    version: 1.6.4-1
     packages:
-      - scribus-1.6.3-5-x86_64.pkg.tar.zst
+      - scribus-1.6.4-1-x86_64.pkg.tar.zst
 team: galaxy
