--- a/world/docker/.artixlinux/pkgbase.yaml
+++ b/world/docker/.artixlinux/pkgbase.yaml
@@ -1,7 +1,7 @@
 ---
 pkgbase:
   name: docker
-  version: 1:28.0.4-2
+  version: 1:28.1.1-1
   arch:
     - x86_64
     - aarch64
@@ -9,11 +9,11 @@ pkgbase:
     - docker
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -32,9 +32,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 1:28.0.4-2
+    version: 1:28.1.1-1
     packages:
-      - docker-1:28.0.4-2-x86_64.pkg.tar.zst
+      - docker-1:28.1.1-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
