--- a/world/intel-compute-runtime/.artixlinux/pkgbase.yaml
+++ b/world/intel-compute-runtime/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: intel-compute-runtime
-  version: 25.09.32961.7-1
+  version: 25.13.33276.16-1
   arch:
     - x86_64
   pkgname:
     - intel-compute-runtime
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 25.09.32961.7-1
+    version: 25.13.33276.16-1
     packages:
-      - intel-compute-runtime-25.09.32961.7-1-x86_64.pkg.tar.zst
+      - intel-compute-runtime-25.13.33276.16-1-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
