--- a/world/libva-intel-driver/.artixlinux/pkgbase.yaml
+++ b/world/libva-intel-driver/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: libva-intel-driver
-  version: 2.4.1-3
+  version: 2.4.1-5
   arch:
     - x86_64
   pkgname:
     - libva-intel-driver
 actions:
   addRepo: world
-  removeRepo: world-gremlins
-  triggersBuild: false
+  removeRepo: null
+  triggersBuild: true
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: true
+  triggersRepoRemove: false
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 2.4.1-3
+    version: 2.4.1-5
     packages:
-      - libva-intel-driver-2.4.1-3-x86_64.pkg.tar.zst
+      - libva-intel-driver-2.4.1-5-x86_64.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
