Updated dolphin-emu - 1:2503-2

--- a/world/dolphin-emu/PKGBUILD
+++ b/world/dolphin-emu/PKGBUILD
@@ -8,7 +8,7 @@ pkgname=(
   dolphin-emu-tool
 )
 pkgver=2503
-pkgrel=1
+pkgrel=2
 epoch=1
 pkgdesc='A Gamecube and Wii emulator'
 arch=(x86_64)
@@ -58,6 +58,7 @@ makedepends=(
   qt6-base
   qt6-svg
   #sfml
+  vulkan-headers
 )
 optdepends=('pulseaudio: PulseAudio backend')
 options=(!emptydirs !lto)
@@ -108,6 +109,7 @@ build() {
     -DCMAKE_BUILD_TYPE=None \
     -DCMAKE_SKIP_RPATH=ON \
     -DCMAKE_INSTALL_PREFIX=/usr \
+    -DCMAKE_POLICY_VERSION_MINIMUM=3.5 \
     -DDISTRIBUTOR=artixlinux.org \
     -DENABLE_ANALYTICS=OFF \
     -DENABLE_AUTOUPDATE=OFF \
@@ -136,6 +138,13 @@ package_dolphin-emu() {
 }
 
 package_dolphin-emu-tool() {
+  depends+=(
+    alsa-lib
+    libevdev
+    libpulse
+    libudev.so
+    qt6-base
+  )
   install -Dm 755 build/Binaries/dolphin-tool -t "${pkgdir}"/usr/bin/
 }
 
