--- a/world/python-aiogram/.artixlinux/pkgbase.yaml
+++ b/world/python-aiogram/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: python-aiogram
-  version: 3.19.0-2
+  version: 3.20.0-1
   arch:
     - any
   pkgname:
     - python-aiogram
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 3.19.0-2
+    version: 3.20.0-1
     packages:
-      - python-aiogram-3.19.0-2-any.pkg.tar.zst
+      - python-aiogram-3.20.0-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
