--- a/world/python-engineio/.artixlinux/pkgbase.yaml
+++ b/world/python-engineio/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: python-engineio
-  version: 4.11.2-3
+  version: 4.12.0-1
   arch:
     - any
   pkgname:
     - python-engineio
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 4.11.2-3
+    version: 4.12.0-1
     packages:
-      - python-engineio-4.11.2-3-any.pkg.tar.zst
+      - python-engineio-4.12.0-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
