--- a/world/python-socketio/.artixlinux/pkgbase.yaml
+++ b/world/python-socketio/.artixlinux/pkgbase.yaml
@@ -1,18 +1,18 @@
 ---
 pkgbase:
   name: python-socketio
-  version: 5.12.1-1
+  version: 5.13.0-1
   arch:
     - any
   pkgname:
     - python-socketio
 actions:
   addRepo: world
-  removeRepo: null
-  triggersBuild: true
+  removeRepo: world-gremlins
+  triggersBuild: false
   triggersRebuild: false
   triggersRepoAdd: true
-  triggersRepoRemove: false
+  triggersRepoRemove: true
   triggersNoCheck: false
 repos:
   system-goblins:
@@ -31,9 +31,9 @@ repos:
     version: null
     packages: []
   world:
-    version: 5.12.1-1
+    version: 5.13.0-1
     packages:
-      - python-socketio-5.12.1-1-any.pkg.tar.zst
+      - python-socketio-5.13.0-1-any.pkg.tar.zst
   lib32-goblins:
     version: null
     packages: []
